// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`descriptions demo > renders _semantic correctly 1`] = `
<div
  class="semantic-preview-container"
  data-v-dfc8ebef=""
>
  <div
    class="ant-row css-var-root semantic-preview-row"
    data-v-dfc8ebef=""
  >
    <div
      class="ant-col ant-col-16 css-var-root semantic-preview-col"
      data-v-dfc8ebef=""
    >
      <div
        style="width: 100%; height: 100%;"
      >
        <button
          aria-checked="false"
          checked="false"
          class="ant-switch css-var-v-0"
          role="switch"
          type="button"
        >
          <div
            class="ant-switch-handle"
          >
            <!---->
          </div>
          <span
            class="ant-switch-inner"
          >
            <span
              class="ant-switch-inner-checked"
            >
              <!---->
            </span>
            <span
              class="ant-switch-inner-unchecked"
            >
              <!---->
            </span>
          </span>
        </button>
         Toggle Border 
        <div
          class="ant-divider css-var-v-0 ant-divider-horizontal ant-divider-rail"
          role="separator"
        >
          <!---->
        </div>
        <div
          class="ant-descriptions semantic-mark-root css-var-v-0"
        >
          <div
            class="ant-descriptions-header semantic-mark-header"
          >
            <div
              class="ant-descriptions-title semantic-mark-title"
            >
              User Info
            </div>
            <div
              class="ant-descriptions-extra semantic-mark-extra"
            >
              <button
                class="ant-btn css-var-v-0 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                type="button"
              >
                <transition-stub
                  appear="false"
                  css="true"
                  name="ant-btn-loading-icon-motion"
                  persisted="false"
                >
                  <!---->
                </transition-stub>
                <span>
                   Edit 
                </span>
                <!---->
              </button>
            </div>
          </div>
          <div
            class="ant-descriptions-view"
          >
            <table>
              <tbody>
                <tr
                  class="ant-descriptions-row"
                >
                  <td
                    class="ant-descriptions-item"
                    colspan="3"
                  >
                    <div
                      class="ant-descriptions-item-container"
                    >
                      <span
                        class="ant-descriptions-item-label semantic-mark-label"
                      >
                        Telephone
                      </span>
                      <!---->
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-8 css-var-root"
      data-v-dfc8ebef=""
    >
      <ul
        class="semantic-list"
        data-v-dfc8ebef=""
      >
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  root
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Root element with basic styles, reset styles, border styles, layout direction and other overall styles for description list container
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  header
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Header element with flex layout, alignment, bottom margin and other layout and style controls for header area
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  title
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Title element with text ellipsis, flex ratio, color, font weight, font size, line height and other title text styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  extra
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Extra content element with left margin, color, font size and other styles for additional operation area
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  label
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Label element with color, font weight, font size, line height, text align, colon styles and other label text styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  content
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Content element with table cell layout, color, font size, line height, word break and other content display styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`descriptions demo > renders basic correctly 1`] = `
<div
  class="ant-descriptions css-var-root"
>
  <div
    class="ant-descriptions-header"
  >
    <div
      class="ant-descriptions-title"
    >
      User Info
    </div>
    <!---->
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                UserName
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                Zhou Maomao
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Telephone
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                1810000000
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Live
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                Hangzhou, Zhejiang
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Remark
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                empty
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="2"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Address
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                No. 18, Wantang Road, Xihu District, Hangzhou, Zhejiang, China
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`descriptions demo > renders block correctly 1`] = `
<div
  class="ant-descriptions ant-descriptions-bordered css-var-root"
>
  <div
    class="ant-descriptions-header"
  >
    <div
      class="ant-descriptions-title"
    >
      User Info
    </div>
    <!---->
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              UserName
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              Zhou Maomao
            </span>
          </td>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Live
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="3"
          >
            <!---->
            <span>
              Hangzhou, Zhejiang
            </span>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Remark
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="5"
          >
            <!---->
            <span>
              empty
            </span>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Address
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="5"
          >
            <!---->
            <span>
              No. 18, Wantang Road, Xihu District, Hangzhou, Zhejiang, China
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`descriptions demo > renders border correctly 1`] = `
<div
  class="ant-descriptions ant-descriptions-bordered css-var-root"
>
  <div
    class="ant-descriptions-header"
  >
    <div
      class="ant-descriptions-title"
    >
      User Info
    </div>
    <!---->
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Product
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              Cloud Database
            </span>
          </td>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Billing Mode
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              Prepaid
            </span>
          </td>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Automatic Renewal
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              YES
            </span>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Order time
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              2018-04-24 18:00:00
            </span>
          </td>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Usage Time
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="3"
          >
            <!---->
            <span>
              2019-04-24 18:00:00
            </span>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Status
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="5"
          >
            <!---->
            <span>
              <span
                class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
              >
                <span
                  class="ant-badge-status-dot ant-badge-status-processing"
                />
                <span
                  class="ant-badge-status-text"
                >
                  running
                </span>
              </span>
            </span>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Negotiated Amount
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              $80.00
            </span>
          </td>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Discount
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              $20.00
            </span>
          </td>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Official Receipts
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              $60.00
            </span>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Config Info
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="5"
          >
            <!---->
            <span>
               Data disk type: MongoDB 
              <br />
               Database version: 3.4 
              <br />
               Package: dds.mongo.mid 
              <br />
               Storage space: 10 GB 
              <br />
               Replication factor: 3 
              <br />
               Region: East China 1 
              <br />
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`descriptions demo > renders responsive correctly 1`] = `
<div
  class="ant-descriptions ant-descriptions-bordered css-var-root"
>
  <div
    class="ant-descriptions-header"
  >
    <div
      class="ant-descriptions-title"
    >
      Responsive Descriptions
    </div>
    <!---->
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Product
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              Cloud Database
            </span>
          </td>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Billing
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              Prepaid
            </span>
          </td>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Time
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              18:00:00
            </span>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Amount
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              $80.00
            </span>
          </td>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Discount
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              $20.00
            </span>
          </td>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Official
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              $60.00
            </span>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Config Info
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
               Data disk type: MongoDB 
              <br />
               Database version: 3.4 
              <br />
               Package: dds.mongo.mid 
            </span>
          </td>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Hardware Info
            </span>
            <!---->
          </th>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="3"
          >
            <!---->
            <span>
               CPU: 6 Core 3.5 GHz 
              <br />
               Storage space: 10 GB 
              <br />
               Replication factor: 3 
              <br />
               Region: East China 1 
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`descriptions demo > renders size correctly 1`] = `
<div
  data-v-app=""
>
  <div
    class="ant-radio-group ant-radio-group-outline css-var-root ant-radio-css-var"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked css-var-root ant-radio-css-var"
    >
      <span
        class="ant-radio ant-wave-target ant-radio-checked ant-wave-target"
        name="v-0"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
        />
      </span>
      <span
        class="ant-radio-label"
      >
         default 
      </span>
    </label>
    <label
      class="ant-radio-wrapper css-var-root ant-radio-css-var"
    >
      <span
        class="ant-radio ant-wave-target ant-wave-target"
        name="v-0"
      >
        <input
          class="ant-radio-input"
          type="radio"
        />
      </span>
      <span
        class="ant-radio-label"
      >
         middle 
      </span>
    </label>
    <label
      class="ant-radio-wrapper css-var-root ant-radio-css-var"
    >
      <span
        class="ant-radio ant-wave-target ant-wave-target"
        name="v-0"
      >
        <input
          class="ant-radio-input"
          type="radio"
        />
      </span>
      <span
        class="ant-radio-label"
      >
         small 
      </span>
    </label>
  </div>
  <br />
  <br />
  <div
    class="ant-descriptions ant-descriptions-bordered css-var-root"
  >
    <div
      class="ant-descriptions-header"
    >
      <div
        class="ant-descriptions-title"
      >
        User Info
      </div>
      <!---->
    </div>
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                Product
              </span>
              <!---->
            </th>
            <td
              class="ant-descriptions-item-content undefined"
              colspan="1"
            >
              <!---->
              <span>
                Cloud Database
              </span>
            </td>
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                Billing Mode
              </span>
              <!---->
            </th>
            <td
              class="ant-descriptions-item-content undefined"
              colspan="1"
            >
              <!---->
              <span>
                Prepaid
              </span>
            </td>
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                Automatic Renewal
              </span>
              <!---->
            </th>
            <td
              class="ant-descriptions-item-content undefined"
              colspan="1"
            >
              <!---->
              <span>
                YES
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                Order time
              </span>
              <!---->
            </th>
            <td
              class="ant-descriptions-item-content undefined"
              colspan="1"
            >
              <!---->
              <span>
                2018-04-24 18:00:00
              </span>
            </td>
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                Usage Time
              </span>
              <!---->
            </th>
            <td
              class="ant-descriptions-item-content undefined"
              colspan="3"
            >
              <!---->
              <span>
                2019-04-24 18:00:00
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                Status
              </span>
              <!---->
            </th>
            <td
              class="ant-descriptions-item-content undefined"
              colspan="5"
            >
              <!---->
              <span>
                <span
                  class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
                >
                  <span
                    class="ant-badge-status-dot ant-badge-status-processing"
                  />
                  <span
                    class="ant-badge-status-text"
                  >
                    running
                  </span>
                </span>
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                Negotiated Amount
              </span>
              <!---->
            </th>
            <td
              class="ant-descriptions-item-content undefined"
              colspan="1"
            >
              <!---->
              <span>
                $80.00
              </span>
            </td>
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                Discount
              </span>
              <!---->
            </th>
            <td
              class="ant-descriptions-item-content undefined"
              colspan="1"
            >
              <!---->
              <span>
                $20.00
              </span>
            </td>
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                Official Receipts
              </span>
              <!---->
            </th>
            <td
              class="ant-descriptions-item-content undefined"
              colspan="1"
            >
              <!---->
              <span>
                $60.00
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                Config Info
              </span>
              <!---->
            </th>
            <td
              class="ant-descriptions-item-content undefined"
              colspan="5"
            >
              <!---->
              <span>
                 Data disk type: MongoDB 
                <br />
                 Database version: 3.4 
                <br />
                 Package: dds.mongo.mid 
                <br />
                 Storage space: 10 GB 
                <br />
                 Replication factor: 3 
                <br />
                 Region: East China 1 
                <br />
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <br />
  <br />
  <div
    class="ant-descriptions css-var-root"
  >
    <div
      class="ant-descriptions-header"
    >
      <div
        class="ant-descriptions-title"
      >
        Custom Size
      </div>
      <div
        class="ant-descriptions-extra"
      >
        <button
          class="ant-btn css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
          type="button"
        >
          <transition-stub
            appear="false"
            css="true"
            name="ant-btn-loading-icon-motion"
            persisted="false"
          >
            <!---->
          </transition-stub>
          <span>
             Edit 
          </span>
          <!---->
        </button>
      </div>
    </div>
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  Product
                </span>
                <span
                  class="ant-descriptions-item-content"
                >
                  Cloud Database
                </span>
              </div>
            </td>
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  Billing
                </span>
                <span
                  class="ant-descriptions-item-content"
                >
                  Prepaid
                </span>
              </div>
            </td>
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  Time
                </span>
                <span
                  class="ant-descriptions-item-content"
                >
                  18:00:00
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  Amount
                </span>
                <span
                  class="ant-descriptions-item-content"
                >
                  $80.00
                </span>
              </div>
            </td>
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  Discount
                </span>
                <span
                  class="ant-descriptions-item-content"
                >
                  $20.00
                </span>
              </div>
            </td>
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  Official
                </span>
                <span
                  class="ant-descriptions-item-content"
                >
                  $60.00
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`descriptions demo > renders style-class correctly 1`] = `
<div
  class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
  data-v-5e3d78eb=""
>
  <div
    class="ant-descriptions custom-descriptions-root ant-descriptions-small ant-descriptions-bordered css-var-root"
    data-v-5e3d78eb=""
  >
    <div
      class="ant-descriptions-header"
    >
      <div
        class="ant-descriptions-title"
      >
        User Info
      </div>
      <!---->
    </div>
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                Product
              </span>
              <!---->
            </th>
            <td
              class="ant-descriptions-item-content undefined"
              colspan="1"
            >
              <!---->
              <span>
                Cloud Database
              </span>
            </td>
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                Billing Mode
              </span>
              <!---->
            </th>
            <td
              class="ant-descriptions-item-content undefined"
              colspan="1"
            >
              <!---->
              <span>
                Prepaid
              </span>
            </td>
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                Automatic Renewal
              </span>
              <!---->
            </th>
            <td
              class="ant-descriptions-item-content undefined"
              colspan="1"
            >
              <!---->
              <span>
                YES
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="ant-descriptions custom-descriptions-root ant-descriptions-bordered css-var-root"
    data-v-5e3d78eb=""
    style="border-radius: 8px; border: 1px solid rgb(205, 193, 255);"
  >
    <div
      class="ant-descriptions-header"
    >
      <div
        class="ant-descriptions-title"
      >
        User Info
      </div>
      <!---->
    </div>
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                Product
              </span>
              <!---->
            </th>
            <td
              class="ant-descriptions-item-content undefined"
              colspan="1"
            >
              <!---->
              <span>
                Cloud Database
              </span>
            </td>
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                Billing Mode
              </span>
              <!---->
            </th>
            <td
              class="ant-descriptions-item-content undefined"
              colspan="1"
            >
              <!---->
              <span>
                Prepaid
              </span>
            </td>
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                Automatic Renewal
              </span>
              <!---->
            </th>
            <td
              class="ant-descriptions-item-content undefined"
              colspan="1"
            >
              <!---->
              <span>
                YES
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`descriptions demo > renders vertical correctly 1`] = `
<div
  class="ant-descriptions css-var-root"
>
  <div
    class="ant-descriptions-header"
  >
    <div
      class="ant-descriptions-title"
    >
      User Info
    </div>
    <!---->
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                UserName
              </span>
              <!---->
            </div>
          </th>
          <th
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Telephone
              </span>
              <!---->
            </div>
          </th>
          <th
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Live
              </span>
              <!---->
            </div>
          </th>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <!---->
              <span
                class="ant-descriptions-item-content"
              >
                Zhou Maomao
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <!---->
              <span
                class="ant-descriptions-item-content"
              >
                1810000000
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <!---->
              <span
                class="ant-descriptions-item-content"
              >
                Hangzhou, Zhejiang
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item"
            colspan="2"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Address
              </span>
              <!---->
            </div>
          </th>
          <th
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Remark
              </span>
              <!---->
            </div>
          </th>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="2"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <!---->
              <span
                class="ant-descriptions-item-content"
              >
                No. 18, Wantang Road, Xihu District, Hangzhou, Zhejiang, China
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <!---->
              <span
                class="ant-descriptions-item-content"
              >
                empty
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`descriptions demo > renders vertical-border correctly 1`] = `
<div
  class="ant-descriptions ant-descriptions-bordered css-var-root"
>
  <div
    class="ant-descriptions-header"
  >
    <div
      class="ant-descriptions-title"
    >
      User Info
    </div>
    <!---->
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Product
            </span>
            <!---->
          </th>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Billing Mode
            </span>
            <!---->
          </th>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Automatic Renewal
            </span>
            <!---->
          </th>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              Cloud Database
            </span>
          </td>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              Prepaid
            </span>
          </td>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              YES
            </span>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Order time
            </span>
            <!---->
          </th>
          <th
            class="ant-descriptions-item-label"
            colspan="2"
          >
            <span>
              Usage Time
            </span>
            <!---->
          </th>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              2018-04-24 18:00:00
            </span>
          </td>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="2"
          >
            <!---->
            <span>
              2019-04-24 18:00:00
            </span>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="3"
          >
            <span>
              Status
            </span>
            <!---->
          </th>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item-content undefined"
            colspan="3"
          >
            <!---->
            <span>
              <span
                class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
              >
                <span
                  class="ant-badge-status-dot ant-badge-status-processing"
                />
                <span
                  class="ant-badge-status-text"
                >
                  running
                </span>
              </span>
            </span>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Negotiated Amount
            </span>
            <!---->
          </th>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Discount
            </span>
            <!---->
          </th>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            <span>
              Official Receipts
            </span>
            <!---->
          </th>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              $80.00
            </span>
          </td>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              $20.00
            </span>
          </td>
          <td
            class="ant-descriptions-item-content undefined"
            colspan="1"
          >
            <!---->
            <span>
              $60.00
            </span>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="3"
          >
            <span>
              Config Info
            </span>
            <!---->
          </th>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item-content undefined"
            colspan="3"
          >
            <!---->
            <span>
               Data disk type: MongoDB 
              <br />
               Database version: 3.4 
              <br />
               Package: dds.mongo.mid 
              <br />
               Storage space: 10 GB 
              <br />
               Replication factor: 3 
              <br />
               Region: East China 1 
              <br />
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
